--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "openai": "^4.77.0",
     "react": "18.3.1",
     "react-dom": "18.3.1"
+    "astronomy-engine": "^2.1.19",
+    "luxon": "^3.4.4"
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
