--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "next": "14.2.16",
     "openai": "^4.77.0",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
     "astronomy-engine": "^2.1.19",
     "luxon": "^3.4.4"
   },
